k8s/addition-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addition-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: addition
  ports:
  - port: 5001
    targetPort: 5001
