k8s/calculator-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: calculator
  ports:
  - port: 5000
    targetPort: 5000
