k8s/division-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: division-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: division
  ports:
  - port: 5004
    targetPort: 5004
