k8s/multiplication-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiplication-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: multiplication
  ports:
  - port: 5003
    targetPort: 5003
