k8s/subtraction-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subtraction-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: subtraction
  ports:
  - port: 5002
    targetPort: 5002
